[gd_scene load_steps=9 format=3 uid="uid://bg6r12jm87m5o"]

[ext_resource type="Script" uid="uid://byv2fxyxptq4l" path="res://scenes/game.gd" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://3g3tffsy42bb" path="res://scenes/slime.tscn" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://c0x6t86wi1xg" path="res://scenes/player.tscn" id="2_yqjtg"]
[ext_resource type="Texture2D" uid="uid://dnegx30rkq1bh" path="res://sprites/sprites/world_tileset.png" id="4_lbhrr"]
[ext_resource type="FontFile" uid="uid://yeapnpycxoms" path="res://sprites/fonts/PixelOperator8.ttf" id="5_iywne"]
[ext_resource type="AudioStream" uid="uid://ct6rxwbxfk8sj" path="res://sprites/sounds/coin.wav" id="6_p57ef"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iywne"]
texture = ExtResource("4_lbhrr")
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
1:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
8:1/0 = 0
8:0/0 = 0
7:0/0 = 0
6:0/0 = 0
5:0/0 = 0
4:0/0 = 0
3:0/0 = 0
2:0/0 = 0
7:1/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
11:1/0 = 0
10:1/0 = 0
9:1/0 = 0
10:2/0 = 0
11:2/0 = 0
9:2/0 = 0
5:2/0 = 0
4:2/0 = 0
3:2/0 = 0
2:2/0 = 0
1:2/0 = 0
0:3/0 = 0
0:4/0 = 0
0:5/0 = 0
1:3/0 = 0
2:3/0 = 0
1:4/0 = 0
1:5/0 = 0
1:6/0 = 0
1:7/0 = 0
0:7/0 = 0
0:8/0 = 0
1:8/0 = 0
0:9/0 = 0
0:10/0 = 0
0:11/0 = 0
0:12/0 = 0
0:13/0 = 0
0:14/0 = 0
0:15/0 = 0
1:15/0 = 0
1:14/0 = 0
1:13/0 = 0
1:12/0 = 0
1:11/0 = 0
1:10/0 = 0
2:10/0 = 0
2:9/0 = 0
1:9/0 = 0
3:9/0 = 0
4:9/0 = 0
4:10/0 = 0
3:10/0 = 0
3:11/0 = 0
3:12/0 = 0
2:12/0 = 0
2:11/0 = 0
4:11/0 = 0
4:12/0 = 0
4:13/0 = 0
3:13/0 = 0
2:13/0 = 0
2:14/0 = 0
2:15/0 = 0
3:15/0 = 0
3:14/0 = 0
4:14/0 = 0
5:13/0 = 0
5:11/0 = 0
5:9/0 = 0
6:9/0 = 0
6:10/0 = 0
7:9/0 = 0
9:3/0 = 0
9:4/0 = 0
8:4/0 = 0
8:3/0 = 0
7:3/0 = 0
6:3/0 = 0
5:3/0 = 0
5:4/0 = 0
5:5/0 = 0
6:5/0 = 0
6:4/0 = 0
6:6/0 = 0
7:5/0 = 0
8:5/0 = 0
8:6/0 = 0
7:6/0 = 0
5:6/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
8:8/0 = 0
7:8/0 = 0
6:8/0 = 0
5:8/0 = 0
4:8/0 = 0
2:8/0 = 0
3:8/0 = 0
3:7/0 = 0
2:4/size_in_atlas = Vector2i(3, 3)
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_p57ef"]
sources/0 = SubResource("TileSetAtlasSource_iywne")

[node name="Game" type="Node2D"]
script = ExtResource("1_lnu2h")

[node name="Slime" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(96, -12)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = -145
limit_top = -80
limit_right = 145
limit_bottom = 80

[node name="Player" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(1, -1)

[node name="Timer" type="Timer" parent="."]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_p57ef")
format = 2
layer_0/name = "Background"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(-262153, 65536, 9, -196617, 65536, 9, -131081, 65536, 9, -65545, 65536, 9, -9, 65536, 9, 65527, 65536, 9, 131063, 65536, 9, 196599, 65536, 9, 262135, 65536, 9, 327671, 65536, 9, -262152, 65536, 9, -196616, 65536, 9, -131080, 65536, 9, -65544, 65536, 9, -8, 65536, 9, 65528, 65536, 9, 131064, 65536, 9, 196600, 65536, 9, 262136, 65536, 9, 327672, 65536, 9, -262151, 65536, 9, -196615, 65536, 9, -131079, 65536, 9, -65543, 65536, 9, -7, 65536, 9, 65529, 65536, 9, 131065, 65536, 9, 196601, 65536, 9, 262137, 65536, 9, 327673, 65536, 9, -262150, 65536, 9, -196614, 65536, 9, -131078, 65536, 9, -65542, 65536, 9, -6, 65536, 9, 65530, 65536, 9, 131066, 65536, 9, 196602, 65536, 9, 262138, 65536, 9, 327674, 65536, 9, -262149, 65536, 9, -196613, 65536, 9, -131077, 65536, 9, -65541, 65536, 9, -5, 65536, 9, 65531, 65536, 9, 131067, 65536, 9, 196603, 65536, 9, 262139, 65536, 9, 327675, 65536, 9, -262148, 65536, 9, -196612, 65536, 9, -131076, 65536, 9, -65540, 65536, 9, -4, 65536, 9, 65532, 65536, 9, 131068, 65536, 9, 196604, 65536, 9, 262140, 65536, 9, 327676, 65536, 9, -262147, 65536, 9, -196611, 65536, 9, -131075, 65536, 9, -65539, 65536, 9, -3, 65536, 9, 65533, 65536, 9, 131069, 65536, 9, 196605, 65536, 9, 262141, 65536, 9, 327677, 65536, 9, -262146, 65536, 9, -196610, 65536, 9, -131074, 65536, 9, -65538, 65536, 9, -2, 65536, 9, 65534, 65536, 9, 131070, 65536, 9, 196606, 65536, 9, 262142, 65536, 9, 327678, 65536, 9, -262145, 65536, 9, -196609, 65536, 9, -131073, 65536, 9, -65537, 65536, 9, -1, 65536, 9, 65535, 65536, 9, 131071, 65536, 9, 196607, 65536, 9, 262143, 65536, 9, 327679, 65536, 9, -327680, 65536, 9, -262144, 65536, 9, -196608, 65536, 9, -131072, 65536, 9, -65536, 65536, 9, 0, 65536, 9, 65536, 65536, 9, 131072, 65536, 9, 196608, 65536, 9, 262144, 65536, 9, -327679, 65536, 9, -262143, 65536, 9, -196607, 65536, 9, -131071, 65536, 9, -65535, 65536, 9, 1, 65536, 9, 65537, 65536, 9, 131073, 65536, 9, 196609, 65536, 9, 262145, 65536, 9, -327678, 65536, 9, -262142, 65536, 9, -196606, 65536, 9, -131070, 65536, 9, -65534, 65536, 9, 2, 65536, 9, 65538, 65536, 9, 131074, 65536, 9, 196610, 65536, 9, 262146, 65536, 9, -327677, 65536, 9, -262141, 65536, 9, -196605, 65536, 9, -131069, 65536, 9, -65533, 65536, 9, 3, 65536, 9, 65539, 65536, 9, 131075, 65536, 9, 196611, 65536, 9, 262147, 65536, 9, -327676, 65536, 9, -262140, 65536, 9, -196604, 65536, 9, -131068, 65536, 9, -65532, 65536, 9, 4, 65536, 9, 65540, 65536, 9, 131076, 65536, 9, 196612, 65536, 9, 262148, 65536, 9, -327675, 65536, 9, -262139, 65536, 9, -196603, 65536, 9, -131067, 65536, 9, -65531, 65536, 9, 5, 65536, 9, 65541, 65536, 9, 131077, 65536, 9, 196613, 65536, 9, 262149, 65536, 9, -327674, 65536, 9, -262138, 65536, 9, -196602, 65536, 9, -131066, 65536, 9, -65530, 65536, 9, 6, 65536, 9, 65542, 65536, 9, 131078, 65536, 9, 196614, 65536, 9, 262150, 65536, 9, -327673, 65536, 9, -262137, 65536, 9, -196601, 65536, 9, -131065, 65536, 9, -65529, 65536, 9, 7, 65536, 9, 65543, 65536, 9, 131079, 65536, 9, 196615, 65536, 9, 262151, 65536, 9, -327672, 65536, 9, -262136, 65536, 9, -196600, 65536, 9, -131064, 65536, 9, -65528, 65536, 9, 8, 65536, 9, 65544, 65536, 9, 131080, 65536, 9, 196616, 65536, 9, 262152, 65536, 9)

[node name="ScoreLabel" type="Label" parent="."]
offset_left = -145.0
offset_top = -77.0
offset_right = -45.0
offset_bottom = -54.0
theme_override_fonts/font = ExtResource("5_iywne")
text = "Score: "

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_p57ef")
bus = &"SFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
